terra/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webcreek
spec:
  selector:
    matchLabels:
      app: webcreek
  replicas: 1
  template:
    metadata:
      labels:
        app: webcreek
    spec:
      containers:
      - name: webcreek
        image: eltano84/webcreek:latest
        ports:
        - containerPort: 80
        resources:
            limits:
              memory: "1024Mi"
              cpu: "300m"
            requests:
              memory: "50Mi"
              cpu: "50m"
#
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
#
      imagePullSecrets:
      - name: docker-registry
