terra/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webcreek
  labels:
    app: webcreek
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: webcreek
  type: NodePort
