terra/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/ssl-redirect: '80'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    kubernetes.io/ingress.class: alb
  name: webcreek
spec:
  rules:
  - host: pepe.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webcreek
            port:
              number: 80
